--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="assets/hp7.JPG" alt="homepage image 6">
         </div>
         <div class="homepage-image" style="top: 40px; left: -450px; z-index: 1;">
-            <a href="file:///Users/gabychoi/Desktop/cs%201300/portfolio/projects.html" title="Projects">
+            <a href="./projects.html" title="Projects">
                 <img src="assets/star.JPG" alt="homepage image 8">
             </a>
         </div>
