--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <section class="project-library">
         <div class="project-grid">
             <!-- Responsive Redesign Project -->
-            <a class="project-card" href="file:///Users/gabychoi/Desktop/cs%201300/portfolio/zara.html">
+            <a class="project-card" href="./zara.html">
                 <div class="project-img">
                     <img src="assets/zara.jpg">
                     <div class="project-overlay"></div>
@@ -21,7 +21,7 @@
                 </div>
             </a>
             <!-- 2nd project-->
-            <a class="project-card" href="file:///Users/gabychoi/Desktop/cs%201300/portfolio/cofx.html">
+            <a class="project-card" href="./cofx.html">
                 <div class="project-img">
                     <img src="assets/cofx.jpg">
                     <div class="project-overlay"></div>
@@ -31,7 +31,7 @@
                 </div>
             </a>
             <!-- 3rd project-->
-            <a class="project-card" href="file:///Users/gabychoi/Desktop/cs%201300/portfolio/modular.html">
+            <a class="project-card" href=",/modular.html">
                 <div class="project-img">
                     <img src="assets/modular.jpg">
                     <div class="project-overlay"></div>
