fixed modular link

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
                 </div>
             </a>
             <!-- 3rd project-->
-            <a class="project-card" href=",/modular.html">
+            <a class="project-card" href="./modular.html">
                 <div class="project-img">
                     <img src="assets/modular.jpg">
                     <div class="project-overlay"></div>
