fixed star link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="homepage-image" style="top: 40px; left: -450px; z-index: 1;">
             <a href="./projects.html" title="Projects">
-                <img src="assets/star.JPG" alt="homepage image 8">
+                <img src="assets/star.jpg" alt="homepage image 8">
             </a>
         </div>
         <div class="homepage-image" style="top: 80px; left: -615px; z-index: 1;">
