--- a/zara.html
+++ b/zara.html
@@ -62,7 +62,7 @@
         <img src="assets/zara.gif" alt="Project Problem Image" class="problem-img">
     </div>
 
-    <img src="assets/zara_analysis.JPG" class="img-analysis">
+    <img src="assets/zara_analysis.jpg" class="img-analysis">
 
     <!-- Case Study: Research-->
     <section class="research">
