--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <img src="assets/hp4.jpg" alt="homepage image 4">
         </div>
         <div class="homepage-image" style="top: -250px; left: -100px; z-index: 1; opacity: 90%;">
-            <img src="assets/hp5.jpg" alt="homepage image 5">
+            <img src="assets/homepage5.jpg" alt="homepage image 5">
         </div>
         <div class="homepage-image" style="top: -190px; left: -300px; z-index: -3; opacity: 90%;">
-            <img src="assets/hp7.jpg" alt="homepage image 6">
+            <img src="assets/homepage7.png" alt="homepage image 6">
         </div>
         <div class="homepage-image" style="top: 40px; left: -450px; z-index: 1;">
             <a href="./projects.html" title="Projects">
