--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
     </div>
     <div class="container">
         <div class="homepage-image" style="top: 20px; left: 10px; z-index: 1; opacity: 90%;">
-            <img src="assets/hp1.jpg" alt="homepage image 1">
+            <img src="assets/hp1.png" alt="homepage image 1">
         </div>
         <div class="homepage-image" style="top: 180px; left: -370px; z-index: -1; opacity: 90%;">
-            <img src="assets/hp2.jpg" alt="homepage image 2">
+            <img src="assets/hp2.png" alt="homepage image 2">
         </div>
         <div class="homepage-image" style="top: -110px; left: 90px; z-index: 1; opacity: 90%;">
-            <img src="assets/hp3.jpg" alt="homepage image 3">
+            <img src="assets/hp3.png" alt="homepage image 3">
         </div>
         <div class="homepage-image" style="top: 130px; left: -200px; z-index: 1; opacity: 90%;">
-            <img src="assets/hp4.jpg" alt="homepage image 4">
+            <img src="assets/hp4.png" alt="homepage image 4">
         </div>
         <div class="homepage-image" style="top: -250px; left: -100px; z-index: 1; opacity: 90%;">
-            <img src="assets/homepage5.jpg" alt="homepage image 5">
+            <img src="assets/hp5.png" alt="homepage image 5">
         </div>
         <div class="homepage-image" style="top: -190px; left: -300px; z-index: -3; opacity: 90%;">
-            <img src="assets/homepage7.png" alt="homepage image 6">
+            <img src="assets/hp7.png" alt="homepage image 6">
         </div>
         <div class="homepage-image" style="top: 40px; left: -450px; z-index: 1;">
             <a href="./projects.html" title="Projects">
