finallylyy images work

--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
             <!-- Responsive Redesign Project -->
             <a class="project-card" href="./zara.html">
                 <div class="project-img">
-                    <img src="assets/zara.jpg">
+                    <img src="assets/zara.png">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                         <h3 class="project-title">Zara</h3>
@@ -23,7 +23,7 @@
             <!-- 2nd project-->
             <a class="project-card" href="./cofx.html">
                 <div class="project-img">
-                    <img src="assets/cofx.jpg">
+                    <img src="assets/cofx.png">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                         <h3 class="project-title">Coffee Exchange</h3>
@@ -33,7 +33,7 @@
             <!-- 3rd project-->
             <a class="project-card" href="./modular.html">
                 <div class="project-img">
-                    <img src="assets/modular.jpg">
+                    <img src="assets/modular.png">
                     <div class="project-overlay"></div>
                     <div class="project-text">
                         <h3 class="project-title">Modular</h3>
