--- a/zara.html
+++ b/zara.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="horizontal-text-2">
-            <img src="assets/vogue.jpg" class="img-horizontal">
+            <img src="assets/vogue.png" class="img-horizontal">
             <div class="half-page-text-col">
                 <h2 class="ht2-title" id="title-bold"> Case 1: Vogue</h2>
                 <h3 class="ht2-body" id="text-semibold">
@@ -124,7 +124,7 @@
             </div>
         </div>
         <div class="horizontal-text-2">
-            <img src="assets/djerf.jpg" class="img-horizontal">
+            <img src="assets/djerf.png" class="img-horizontal">
             <div class="half-page-text-col">
                 <h2 class="ht2-title" id="title-bold"> Case 2: Djerf Avenue</h2>
                 <h3 class="ht2-body" id="text-semibold">
